Fix: spacing on small screens (< 350px)

--- a/src/modules/dashboard/components/ColonyFundingBanner/ColonyFundingBanner.css
+++ b/src/modules/dashboard/components/ColonyFundingBanner/ColonyFundingBanner.css
@@ -19,6 +19,12 @@
 
 @media screen and query700 {
   .main {
+    padding-left: 14px;
+    padding-right: 14px;
     font-size: var(--size-smallish);
+  }
+
+  .address {
+    word-break: break-word;
   }
 }
